--- a/docs/latex/Graph_8cpp.tex
+++ b/docs/latex/Graph_8cpp.tex
@@ -10,8 +10,7 @@
 {\ttfamily \#include $<$sstream$>$}\newline
 {\ttfamily \#include "{}Graph\+Screen/\+App\+Interface.\+h"{}}\newline
 {\ttfamily \#include $<$unordered\+\_\+set$>$}\newline
-Include dependency graph for Graph.\+cpp\+:
-\nopagebreak
+Include dependency graph for Graph.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
