--- a/docs/latex/classLightRenderer.tex
+++ b/docs/latex/classLightRenderer.tex
@@ -2,8 +2,7 @@
 \hypertarget{classLightRenderer}{}\label{classLightRenderer}\index{LightRenderer@{LightRenderer}}
 
 
-Inheritance diagram for Light\+Renderer\+:
-\nopagebreak
+Inheritance diagram for Light\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for Light\+Renderer\+:
 \end{figure}
 
 
-Collaboration diagram for Light\+Renderer\+:
-\nopagebreak
+Collaboration diagram for Light\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
