--- a/docs/latex/classPlaneColorRenderer.tex
+++ b/docs/latex/classPlaneColorRenderer.tex
@@ -2,8 +2,7 @@
 \hypertarget{classPlaneColorRenderer}{}\label{classPlaneColorRenderer}\index{PlaneColorRenderer@{PlaneColorRenderer}}
 
 
-Inheritance diagram for Plane\+Color\+Renderer\+:
-\nopagebreak
+Inheritance diagram for Plane\+Color\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for Plane\+Color\+Renderer\+:
 \end{figure}
 
 
-Collaboration diagram for Plane\+Color\+Renderer\+:
-\nopagebreak
+Collaboration diagram for Plane\+Color\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
