--- a/docs/latex/classPlaneModelRenderer.tex
+++ b/docs/latex/classPlaneModelRenderer.tex
@@ -2,8 +2,7 @@
 \hypertarget{classPlaneModelRenderer}{}\label{classPlaneModelRenderer}\index{PlaneModelRenderer@{PlaneModelRenderer}}
 
 
-Inheritance diagram for Plane\+Model\+Renderer\+:
-\nopagebreak
+Inheritance diagram for Plane\+Model\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for Plane\+Model\+Renderer\+:
 \end{figure}
 
 
-Collaboration diagram for Plane\+Model\+Renderer\+:
-\nopagebreak
+Collaboration diagram for Plane\+Model\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
