--- a/docs/latex/classPlaneRenderer.tex
+++ b/docs/latex/classPlaneRenderer.tex
@@ -2,8 +2,7 @@
 \hypertarget{classPlaneRenderer}{}\label{classPlaneRenderer}\index{PlaneRenderer@{PlaneRenderer}}
 
 
-Inheritance diagram for Plane\+Renderer\+:
-\nopagebreak
+Inheritance diagram for Plane\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
