--- a/docs/latex/structBaseRenderer.tex
+++ b/docs/latex/structBaseRenderer.tex
@@ -2,8 +2,7 @@
 \hypertarget{structBaseRenderer}{}\label{structBaseRenderer}\index{BaseRenderer@{BaseRenderer}}
 
 
-Inheritance diagram for Base\+Renderer\+:
-\nopagebreak
+Inheritance diagram for Base\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
