--- a/docs/latex/structMeshRenderer.tex
+++ b/docs/latex/structMeshRenderer.tex
@@ -2,8 +2,7 @@
 \hypertarget{structMeshRenderer}{}\label{structMeshRenderer}\index{MeshRenderer@{MeshRenderer}}
 
 
-Inheritance diagram for Mesh\+Renderer\+:
-\nopagebreak
+Inheritance diagram for Mesh\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for Mesh\+Renderer\+:
 \end{figure}
 
 
-Collaboration diagram for Mesh\+Renderer\+:
-\nopagebreak
+Collaboration diagram for Mesh\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
