--- a/docs/latex/structTextureMeshRenderer.tex
+++ b/docs/latex/structTextureMeshRenderer.tex
@@ -2,8 +2,7 @@
 \hypertarget{structTextureMeshRenderer}{}\label{structTextureMeshRenderer}\index{TextureMeshRenderer@{TextureMeshRenderer}}
 
 
-Inheritance diagram for Texture\+Mesh\+Renderer\+:
-\nopagebreak
+Inheritance diagram for Texture\+Mesh\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for Texture\+Mesh\+Renderer\+:
 \end{figure}
 
 
-Collaboration diagram for Texture\+Mesh\+Renderer\+:
-\nopagebreak
+Collaboration diagram for Texture\+Mesh\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
