--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -208,6 +208,7 @@
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
 \input{index}
+\input{My}
 \chapter{Hierarchical Index}
 \input{hierarchy}
 \chapter{Class Index}
