--- a/docs/latex/structColorMeshRenderer.tex
+++ b/docs/latex/structColorMeshRenderer.tex
@@ -2,8 +2,7 @@
 \hypertarget{structColorMeshRenderer}{}\label{structColorMeshRenderer}\index{ColorMeshRenderer@{ColorMeshRenderer}}
 
 
-Inheritance diagram for Color\+Mesh\+Renderer\+:
-\nopagebreak
+Inheritance diagram for Color\+Mesh\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for Color\+Mesh\+Renderer\+:
 \end{figure}
 
 
-Collaboration diagram for Color\+Mesh\+Renderer\+:
-\nopagebreak
+Collaboration diagram for Color\+Mesh\+Renderer\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
