--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -208,7 +208,7 @@
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
 \input{index}
-\input{My_test_page}
+\input{dev_guide}
 \chapter{Hierarchical Index}
 \input{hierarchy}
 \chapter{Class Index}
